# sample-docs

./: Makefile  pyproject.toml
.github/workflows/: pages.yml
ja/: mkdocs.yml
ja/docs/: index.md
